# system-developer-task

./: CMakeLists.txt  README.md
include/: intercepting_lib.h  log_entry.h  shared_buffer.h
src/: demons.cpp  intercepting_lib.cpp
